array.island.Island.scala.error
Compilation error:
Island:4: error: Int does not take parameters
  for (i<-0 to num.length()-2){
                         ^